tests/semantic/pass/var-function.tiger
let
	var a := 0
	function a () = ()
in
end
