tests/semantic/fail/function-function.tiger
let
	function a () = ()
	function a () = ()
in
end
